# Oaip

./: CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: build.yml
2Lab1/: func.c  func.h  main.c
2Lab2/: functions.c  functions.h  main.c
2Lab2/compressor/: functions.c  functions.h  main.c
2Lab2_dec/decompressor/: func_decompress.c  func_decompress.h  main_decompress.c
2Lab3/: func.c  func.h  main.c
2Lab4/: database.txt  func.c  func.h  main.c
Lab1_2/: Lab1_2.vcxproj  Lab1_2.vcxproj.filters
Lab1_3/: Lab1_3.vcxproj  Lab1_3.vcxproj.filters  lab1_3.c
Lab1_4/: Lab1_4.vcxproj  Lab1_4.vcxproj.filters  lab1_4.c
Lab_3_1/: Source.c  Source2.c
Lab_3_1/x64/Debug/: Lab_3_1.ilk  vc143.idb
Lab_3_2/: Source.c
Lab_3_2/x64/Debug/: Lab_3_2.ilk  vc143.idb
Lab_3_3/: Source.c
Lab_3_3/x64/Debug/: Lab_3_3.ilk  vc143.idb
